--- a/seasar-sample/pom.xml
+++ b/seasar-sample/pom.xml
@@ -74,6 +74,11 @@
 		</repository>
 	</repositories>
 	<dependencies>
+		<dependency>
+  			<groupId>mysql</groupId>
+  			<artifactId>mysql-connector-java</artifactId>
+  			<version>5.1.23</version>
+		</dependency>
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
