--- a/selenium-test-sample/pom.xml
+++ b/selenium-test-sample/pom.xml
@@ -27,5 +27,29 @@
             <version>2.41.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+	      <groupId>info.cukes</groupId>
+	      <artifactId>cucumber-core</artifactId>
+		  <version>1.1.8</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+		  <groupId>info.cukes</groupId>
+	      <artifactId>cucumber-java</artifactId>
+	      <version>1.1.8</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>info.cukes</groupId>
+	      <artifactId>cucumber-junit</artifactId>
+	      <version>1.1.8</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+          <groupId>info.cukes</groupId>
+          <artifactId>cucumber-picocontainer</artifactId>
+          <version>1.1.8</version>
+          <scope>test</scope>
+        </dependency>        
   </dependencies>
 </project>
